# poopy-clicker

./: .gitignore  CHANGELOG.md  README.md  flake.nix  install.sh  main.py  poopy-clicker.desktop  pyproject.toml  setup.iss
.github/workflows/: release.yml
poopy_clicker/: bestiary.py  constants.py  events.py  game_state.py  game_window.py  goober.py  main.py  missions.py  particles.py  play_area.py  save_load.py  sound_manager.py
