[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poopy-clicker"
version = "1.0.0"
description = "Poopy Clicker — jogo de cliques com goobers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyQt6>=6.5"]

[project.scripts]
poopy-clicker = "poopy_clicker.main:main"

[tool.setuptools.packages.find]
include = ["poopy_clicker*"]

[tool.setuptools.package-data]
poopy_clicker = ["assets/**/*"]
